<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="action_today">Aujourd\'hui</string>
    <string name="action_cancel">Annuler</string>
    <string name="action_close">Fermer</string>
    <string name="action_select">Sélectionner</string>
    <string name="prime_date_picker_selected_day">Jour sélectionné</string>
    <string name="prime_date_picker_from">De</string>
    <string name="prime_date_picker_to">À</string>
    <string name="no_day_is_selected">Aucun jour n\'est sélectionné!</string>
    <string name="no_range_is_selected">Aucune intervalle n\'est sélectionné!</string>
    <string name="copyright">Copyright © Tous droits réservés.</string>
    <string name="courierNoInfo">N\'a pas encore d\'informations</string>
    <string name="courier_code">Code:</string>
    <string name="courier_type">Type:</string>
    <string name="courier_info_title">Plis Informations</string>
    <string name="valider">Valider</string>
    <string name="profile_title">Mon Profile</string>
    <string name="pclose">Fermer</string>
    <string name="scan">Scan</string>
    <string name="view">Voir</string>
    <string name="delete">Supprimer</string>
    <string name="courier_delete">Voules vous vraiment supprimer ce plis</string>
    <string name="collect_toolbar_title">Ramassage: à partir d\'une agence</string>
    <string name="collect">Collect</string>
    <string name="distribut">Distribut</string>
    <string name="sync">Sync</string>
    <string name="collected_toolbar_title">Plis non synchronisés</string>
    <string name="missing_scan_data">SVP scanner le QR Code</string>
    <string name="missing_scan_code">SVP scanner le Code</string>
    <string name="all_data_scanned">Données collectées correctement</string>
    <string name="priority">Priorité:</string>
    <string name="type">Type</string>
    <string name="agency_receiver_id">Distinataire id</string>
    <string name="agency_sender_id">Expiditeur id</string>
    <string name="code">Code</string>
    <string name="etat">Etat</string>
    <string name="user_collector_id">Collecteur ID</string>
    <string name="pointage">Pointage</string>
    <string name="acceuil_toolbar_title">Acceuil</string>
    <string name="connexion_message_wait">Please wait..</string>
    <string name="opp_sync_encours">Synchronisation en cours...</string>
    <string name="agency_receiver_code">Distinataire  Code:</string>
    <string name="agency_sender_code">Expiditeur  Code:</string>
    <string name="hint_recherche">Rechercher</string>
    <string name="distribut_toolbar_title">Distribuer des plis</string>
    <string name="sync_succeed">Synchronisation réussie</string>
    <string name="sync_failed">échec de la synchronisation.\n veuillez réessayer svp</string>
    <string name="fermer">Fermer</string>
    <string name="dialog_distrubution_title">Distribuer vers</string>
    <string name="agency">Agence</string>
    <string name="sorting_center">Centre de tri</string>
    <string name="toolbar_distribut_toagency_title">Distribuer: vers une agence</string>
    <string name="dialog_collection_title">Ramassage à partir</string>
    <string name="collected_not_allowed">certains plis n\'ont pas encore tous les données necessaire</string>
    <string name="sc_collect_toolbar_title">Ramassage: a partir dun centre de tri</string>
    <string name="a_pointage_toolbar_title">Pointages</string>
    <string name="missing_pointage_data">missing pointage data</string>
    <string name="pointage_delete_title">Voulez vous vraiment supprimer ce pointage</string>
    <string name="date">Date</string>
    <string name="planning">Planning</string>
    <string name="planning_toolbar_title">Planning</string>
    <string name="missing_planning_data">planning data vide</string>
    <string name="synclist_toolbar_title">Problems de synchronisation</string>
    <string name="validated_at">Validated at</string>
    <string name="planning_info_title">Planning Informations</string>
    <string name="adresse">adresse</string>
    <string name="site">Site</string>
    <string name="bank">Banque</string>
    <string name="line">Ligne</string>
    <string name="created_at">Created at</string>
    <string name="pointage_info_title">Pointage Informations</string>
    <string name="code_agence">Code Agence</string>
    <string name="sync_problems">Sync Problems</string>
    <string name="collect_from_agency">Collect From Agency</string>
    <string name="collect_from_sc">Collect From SC</string>
    <string name="distribut_to_agency">Distribut To Agency</string>
    <string name="pointages">Pointages</string>
    <string name="problem">Problem:</string>
    <string name="sync_finished">Sync Terminé</string>
    <string name="sync_errors">some errors sv check sync errors</string>
    <string name="has_problem">pointage has problem</string>
    <string name="sync_failed_token">please reconnect pour charger le token</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="annuler">Annuler</string>
    <string name="acc_synchronisation">Synchronisation</string>
    <string name="acc_distribution">Distribution</string>
    <string name="acc_collection">Ramassage</string>
    <string name="acc_pointage">Pointage</string>
    <string name="opp_getplanning">Récuperation du planning</string>
    <string name="planning_failed_token">token introuvable veillez reconnecter svp</string>
    <string name="app_name">Condor Sales</string>
    <string name="send">Envoyer</string>
    <string name="scanning">Recherche en cours...</string>
    <string name="none_paired">Aucun appareil n\'a été connecté</string>
    <string name="title_location_permission">Localisation</string>
    <string name="text_location_permission">La permission de localisation est obligatoir</string>
    <string name="title_location_activation">GPS</string>
    <string name="text_location_activation">Veuillez activer le service de localisation en mode haute précision.</string>
    <string name="ok">Oui</string>
    <string name="discoverable_permission">Bluetooth</string>
    <string name="initin_ble">Activation Bluetooth..</string>
    <string name="result_p_empty">Cliquez ici</string>
    <string name="Connecting">Connexion en cours..</string>
    <string name="WaittingDC">Recherche en cours..</string>
    <string name="PointageFailed">Opération échouée !</string>
    <string name="SearchingPV">Recherche en cours..</string>
    <string name="Validating">Validation en cours..</string>
    <string name="WaittingPvValidation">En attente de validation..</string>
    <string name="PointageSucced">Opération terminée</string>
    <string name="PVSucced">Pointage effectué avec succès</string>
    <string name="DCSucced">Pointage effectué avec succès</string>
    <string name="PVnotFound">Aucun délégué commercial n\'a été trouvé</string>
    <string name="DCnotFound">Aucun point de vente n\'a été trouvé</string>
    <string name="champs_vide">Veuillez compléter tous les champs</string>
    <string name="mobile_info">Les informations de votre appareil ( </string>
    <string name="mobile_info2"> ) ne sont pas disponibles</string>
    <string name="wrong_credentials">La connexion a échoué avec des informations d\'identification incorrectes.</string>
    <string name="wrong_device">Vous devez utiliser votre appareil (</string>
    <string name="wrong_device_2">)\nPour accéder à votre compte.</string>
    <string name="pontageNotValide">à visiter..</string>
    <string name="pontageValide">à  </string>
    <string name="wrong_authentication">Echec d\'authentification !\nVeuillez vérifier vos informations.</string>
    <string name="wrong_authentication_validation">Erreur d\'authentification !\nVeuillez réessayer svp.</string>
    <string name="new_password">Veuillez choisir un nouveau mot de passe.</string>
    <string name="hint_new_password">Nouveau mot de passe</string>
    <string name="hint_password_confirmation">Confirmation mot de passe</string>
    <string name="reset_password">Enregistrer</string>
    <string name="hint_email">Code POS</string>
    <string name="password">Mot de passe</string>
    <string name="remember_me">Se souvenir</string>
    <string name="forget_password">Mot de passe oublié ?</string>
    <string name="sent_code">Veuillez saisir le code de récupération que vous avez réçu sur votre E-mail pour réinitialiser le mot de passe.</string>
    <string name="mtoday">Aujourd\'hui</string>
    <string name="lost_device">Connexion perdu</string>
    <string name="unable_device">Impossible de se connecter à cet appareil</string>
    <string name="DCFailed">Opération échouée !</string>
    <string name="PVFailed">Opération échouée !</string>
    <string name="log_in">Se connecter</string>
    <string name="btn_continue">Vérifier</string>
    <string name="youremail">Saisissez votre identifiant (code pos) puis cliquez sur Suivant. Si vous ne vous souvenez pas de votre code contacter votre administrateur </string>
    <string name="already_used_device">Cet appareil est utilisé par un autre utilisateur.</string>
    <string name="hint_code">Code de récupération</string>
    <string name="lsot_password">Récupérer mon mot de passe</string>
    <string name="email_doesntsent">L\'envoi du mail a été échoué.</string>
    <string name="email_invalid">Cet E-mail n\'existe pas.</string>
    <string name="wrong_codeRecuperation">Votre code de récupération est invalide.</string>
    <string name="password_identique">Les mots de passe entrés ne sont pas identiques.</string>
    <string name="password_length">Votre mot de passe doit être superieur à 6 caractères.</string>
    <string name="password_updated">Votre nouveau mot de passe a été bien enregistré.</string>
    <string name="password_not_updated">Opération échouée !\nVeuillez réessayer svp.</string>
    <string name="connection_failed">Connexion perdu !\nVeuillez vérifier votre connexion internet.</string>
    <string name="logout">Vous ête bien déconnecté</string>
    <string name="logout_confirmation">Voulez-vous vraiment vous déconnecter ?</string>
    <string name="logout_failed">Déconnexion échouée</string>
    <string name="logout_laoding">Déconnexion en cours</string>
    <string name="logout_title">Déconnexion</string>
    <string name="connexion_title">Attention !</string>
    <string name="connexion_verification">Veuillez vérifier votre connexion internet.</string>
    <string name="ressayer">Réessayer</string>
    <string name="empty_codeRecuperation">Veuillez saisir votre code de récupération svp.</string>
    <string name="invalid_email">Cet E-mail est invalide\nVeuillez vérifier svp.</string>
    <string name="confirmationCode_laoding">Confirmation en cours..</string>
    <string name="laoding">Chargement en cours..</string>
    <string name="already_validated">L\'opération a été déja effectuée avec ce\u0020</string>
    <string name="point_de_vente">point de vente</string>
    <string name="delegue_commercial">délégué commercial</string>
    <string name="phone_calls_permission_denied">La permission des appels téléphoniques est obligatoir</string>
    <string name="hint_recherche_pv">Rechercher..</string>
    <string name="myesterday">Hier</string>
    <string name="informations">Informations</string>
    <string name="name">Nom</string>
    <string name="email">E-mail</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="address">Adresse</string>
    <string name="location_permission">Svp activate location</string>
    <string name="autoriser_location">Autoriser</string>
    <string name="activate_location">Activer</string>
    <string name="Appeler">Appeler</string>
    <string name="condor_copyright">Copyright © Condor Electronics. Tous droits réservés.</string>
    <string name="wrong_pv">Ce point de vente n\'appartient pas à votre liste des pointages</string>
    <string name="wrong_dc">Ce délégué commercial n\'appartient pas à votre liste des pointages</string>
</resources>