<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"

    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingBottom="50dp"
            android:paddingTop="50dp"
            android:text="@string/new_password"
            android:textSize="16dp"
            android:textColor="#051A42"
            android:fontFamily="@font/montserratr"

            />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textColor="#051A42"
            android:textColorHint="#99051A42"
            android:textColorHighlight="@color/colorSelection"
            android:fontFamily="@font/montserratr"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/newPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapeemail"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password_confirmation"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textColor="#051A42"
            android:textColorHint="#99051A42"
            android:textColorHighlight="@color/colorSelection"
            android:fontFamily="@font/montserratr"
            android:maxLines="1"/>

        <Button
            android:id="@+id/btn_updatePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/button"
            android:fontFamily="@font/montserratr"
            android:padding="15dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@color/mtext_color" />
    </LinearLayout>


</RelativeLayout>